# pgrank

./: .clang-format  .gitignore  CHANGELOG.md  Doxyfile  README.md  annotated.html  annotated_dup.js  classPageRank-members.html  classPageRank.html  classPageRank.js  classes.html  cliff.toml  dir_000002_000001.html  dir_000004_000000.html  dir_000005_000000.html  dir_4ee25167394904c2fb66585429971743.html  dir_4ee25167394904c2fb66585429971743.js  dir_4ee25167394904c2fb66585429971743_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_a0299618b49a9d5a364bfd17779fcdfc.html  dir_a0299618b49a9d5a364bfd17779fcdfc.js  dir_c1bf2c51bdbff42f21eacadc8e7eee5c.html  dir_c1bf2c51bdbff42f21eacadc8e7eee5c.js  dir_c1bf2c51bdbff42f21eacadc8e7eee5c_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  dir_fcb4fb62a8205f74db446b6c4c1eb152.html  dir_fcb4fb62a8205f74db446b6c4c1eb152.js  dir_fcb4fb62a8205f74db446b6c4c1eb152_dep.dot  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  (+19 more)
.github/: dependabot.yml
.github/workflows/: cyto.yml  doxygen.yml  jreleaser.yml  meson.yml  releaser.yml
caibg/: code.js  data.json  index.html  style.css
examples/caibg/: README.md  caibg.csv  caibg.json  caibg.md  caibg.py  caibg_rifugi.json  caibg_sentieri.json  cyto.py
examples/caibg/cyto/: cy-style.json  index.html  style.css
examples/caibg/data/: caibg.json
examples/caibg/scrapy/: scrapy.cfg
examples/caibg/scrapy/caibg_crawler/: items.py  middlewares.py  pipelines.py  settings.py
examples/caibg/scrapy/caibg_crawler/spiders/: caibg_rifugi.py  caibg_sentieri.py
include/json2mat/: json2mat.hpp
include/pagerank/: pagerank.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
src/: meson.build  pgrank.cpp
src/json2mat/: json2mat.cpp  json2mat.hpp
src/pagerank/: pagerank.cpp  pagerank.hpp
subprojects/: argparse.wrap  catch2.wrap
tests/: meson.build  pgrank_test.cpp
tests/input/: caibg.fake.json  invalid.json  no_json_here.txt  valid.no-arr-obj.json  valid.no-arr.json  valid.no-keys.json  valid.no-nnarr-str.json  valid.no-nnarr.json  valid.no-str.json  valid.node-lack.json
